Fix spacing issues in members page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -247,7 +247,7 @@ a:visited {
 .core-faculty-items {
     display: flex;
     flex-direction: column;
-    width: 20%;
+    width: 185px;
     align-items: center;
     justify-content: center;
     margin: 20px;
@@ -280,7 +280,7 @@ a:visited {
 .members-items {
     display: flex;
     flex-direction: column;
-    width: 20%;
+    width: 185px;
     align-items: center;
     justify-content: center;
     margin: 10px;
